--- a/20. WAN.md
+++ b/20. WAN.md
@@ -62,3 +62,33 @@
     - **Site-to-site VPNs:** Kết nối tất cả mạng này với tất cả mạng khác
     - **Remote-access VPNs:** Dùng cho các host riêng lẻ để kết nối từ xa đến mạng của công ty qua Internet
     - **Dynamic Multipoint VPN:**  Công nghệ của Cisco để xây dựng VPN một cách dễ dàng
+- Một số công nghệ được áp dụng với `Dynamic Multipoint VPN`: 
+    - Next Hop Resolution Protocol (NHRP): liên kết các địa chỉ IP public với tất cả đường tunnel, chính là việc ánh xạ địa chỉ tunnel sang địa chỉ cổng vật lí
+    - IP Security (IPsec) encryption: Cung cấp bảo mật trên đường truyền thông tin riêng qua Internet
+    - Multipoint Generic Routing Encapsulation (mGRE): Cho phép một tunnel có thể đến được nhiều điểm đích
+
+## 4. Khái niệm Point-to-point
+- PPP cung cấp nhiều chức năng cơ bản hữu dụng cho kết nối giữa 2 thiết bị
+    - Xác định header và trailer cho phép phần phối frame của đường dẫn
+    - Hỗ trợ liên kết đồng bộ và không đồng bộ
+    - Cho phép nhiều giao thức L3 truyền qua một đường dẫn
+    - Cơ chế xác thực
+    - Kiểm soát giao thức
+
+## 5. PPPoE
+- PPP có thể sử dụng trên tất cả đường dẫn serial (kết nối lớp 2).
+- Cho phép kết nối một máy chủ duy nhất được phân chia thành nhiều máy cá nhân, sử dụng Ethernet.
+
+## 6. BGP
+- BGP trao đổi thông tin định tuyến với các router khác, được gọi là BGP hàng xóm. 
+- Những BGP hàng xóm định tuyến tại các công ty khác nhau, gọi là định tuyến liên miền. 
+- Hoạt động dựa trên việc cập nhật một bảng chứa các địa chỉ mạng cho biết mối liên kết giữa các AS(autonomous system), tập hợp các hệ thống mạng dưới cùng sự điều hành của một nhà quản trị mạng (ISP).
+- Mỗi nhà mạng dùng một cách định tuyến khác nhau, nên khi kết nối với nhau khó tìm được tuyến đường. Sinh ra BGP 
+- Không dựa trên metric để chọn tuyến đường, chọn đường theo distribute
+
+![3](/image/2021-04-20_16-30-02.png)
+- Điểm khác biệt giữa iBGP và eBGP
+
+![4](/image/2021-04-20_16-36-51.png)
+- iBGP kết nối các hệ thống tự trị với nhau, nội miền.
+- eBGP là kết nối ngoại miền, các nhà cung cấp khác nhau kết nối với nhau. 
