--- a/21. QoS, Cloud, and SDN.md
+++ b/21. QoS, Cloud, and SDN.md
@@ -1,3 +1,136 @@
 # QoS, Cloud, and SDN
 - Quality of Service (QoS) là công cụ và kĩ thuật mà người quản trị mạng dùng để cải thiện lưu lượng trong mạng. 
-- 
+- Điện toán đám mây là một dịch vụ tăng cường quan trọng cung cấp các lựa chọn đến người dùng cuối. Các mạng doanh nghiệp có thể dùng nhiều dịch vụ mà điện toán đám mây đem lại để tăng năng suất và giảm chi phí
+- Software-Defined Networking (SDN) trở thành thành phần tích hợp của mạng doanh nghiệp vì người quản trị có thể nhanh chóng quản lý hàng nghìn thiết bị mạng
+## 1. QoS
+- Các công cụ QoS được dùng để phân loại lưu lượng dựa trên:
+    - **Latency (Delay):** Độ trễ, là thời gian để dữ liệu có thể gửi đến bên nhận. Công cụ QoS có thể giảm độ trễ các gói như thoại và video
+    - **Jitter:** Jitter là phương sai trong độ trễ của gói. Công cụ QoS có thể thoát khỏi độ trễ của gói tin để cải thiện trải nghiệm người dùng
+    - **Loss:** Số lượng tin bị mất, thường là phần trăm của gói tin được gửi. Công cụ QoS giảm packet loss, đặc biệt với lưu lượng liên quan đến thời gian.
+    - **Bandwidth:** Băng thông là thước đo của dữ liệu một interface có thể gửi mỗi giây. Công cụ QoS có thể quản lý kiểu lưu lượng dùng băng thông.
+
+![1](/image/2021-04-23_13-30-24.png)
+
+![2](/image/2021-04-23_13-32-16.png)
+- Tổng quan: 
+    - **Classification and marking:** Giám sát lưu lượng và phân chia gói dựa trên nội dung header. Tin nhắn sau đó được đánh dấu bằng cách thay đổi bit trong tiêu đề.
+    - **Congestion avoidance:** Khi lưu lượng vượt quá số lượng cho phép của tài nguyên mạng, một số lưu lượng có thể bị bỏ, trễ, hoặc đánh dấu lại để tránh tắc nghẽn.
+    - **Congestion management:** Quản lý lịch trình và định hình lưu lượng khi gói tin chờ ra khỏi interface
+
+### 1.1 Classification and marking
+- Classification là quá trình xử lý trường phù hợp trong header để lấy 1 số kiểu của QoS trên gói tin.
+- Marking là quá trình xử lý thay đổi giá trị bit trong ToS hoặc trường Traffic Class.
+- Trọng tâm trong đề mục này là DSCP, là lớp lõi để phân biệt dịch vụ dùng QoS. 
+##### DSCP và IPP 
+
+![3](/imgae/2021-04-23_13-54-03.png)
+
+- Với các đường trunk L2, byte thứ 3 của 4-byte 802.1Q header là cho Class of Service (CoS), và công cụ QoS để đánh dấu frame. Trường này chỉ tồn tại khi frame đi qua đường trunk
+##### EF và AF
+- Expedited Forwarding (EF) là giá trị thập phân DSCP của 46 được gợi ý để dùng với các gói yêu cầu độ trễ, jitter và loss thấp. Dùng để mark gói thoại
+- Assured Forwarding (AF) xác định một bộ 12 giá trị DSCP được xếp vào một ma trận
+
+![4](/image/2021-04-23_14-03-44.png)
+
+### 1.2 Congestion Management
+- Quản lý tắc nghẽn là công cụ QoS để quản lý hàng chờ khi gói tin ra khỏi interface.
+- Công cụ phổ biến là Class-Based Weighted Fair Queueing (CBWFQ), chỉ định class của lưu lượng để xếp hàng và đảm bảo băng thông nhỏ nhất cho hàng chờ.
+
+![4](/imgae/68747470733a2f2f692e696d6775722e636f6d2f736766584c53722e706e67.png)
+- Tuy nhiên, chỉ riêng CBWFQ là không đủ với các lưu lượng yêu cầu về thời gian. Low Latency Queueing là giải pháp bổ sung đi kèm theo CBWFQ. 
+
+### 1.3 Policing, Shaping, and TCP Discards
+- 2 công cụ để tránh tắc nghẽn là policing và shaping. 2 công cụ này giữ bit rate ở mức cùng hoặc dưới tốc độ cho phép.
+
+![5](/image/2021-04-23_14-15-07.png)
+- Nhà cung cấp dịch vụ dùng chính sách này để ghép với CIR. Nếu người sử dụng vượt quá 200Mbps, SP có thể dừng truyền gói tin thêm hoặc đánh dấu nhưng vẫn cho chúng thông qua. 
+- Chính sách gồm các bước 
+    - Đo lưu lượng qua thời gian để so sánh với chính sách đã được cấu hình. 
+    - Cho phép burst lưu lượng trong thời gian ngắn.
+    - Hủy tin thừa hoặc đánh dấu lại để loại bỏ nó sau nếu xảy ra tắc nghẽn
+- Cơ chế Shaping
+
+![6](/image/2021-04-23_14-26-15.png)
+- Shaping không thể làm chậm tốc độ vật lí của interface, thay vào đó nó sẽ gửi và chờ. 
+- Đo lưu lượng qua thời gian để so sánh với shaping rate đã cấu hình.
+- Cho phép burst lưu lượng trong thời gian ngắn
+- Làm chậm gói tin bằng cách cho chúng vào hàng chờ
+
+### 1.4 Qos và TCP 
+- Khi hàng chờ phía dưới đầy, gói tin nhận cuối cùng sẽ bị bỏ
+
+![7](/image/2021-04-23_14-31-38.png)
+
+## 2. Cloud Computing
+- Điện toán đám mây liên quan đến một số lượng lớn các máy tính kết nối qua một mạng đặt ở bất cứ đâu. 
+- Lợi ích của Cloud Computing
+    - Cho phép truy cập dữ liệu của tổ chức mọi lúc mọi nơi
+    - Chỉ đăng ký các dịch vụ cần thiết
+    - Không cần hoặc giảm yêu cầu nhân viên IT để quản lý, giám sát
+    - Giảm chi phí, năng lượng, thiết bị vật lý và tranning nhân viên
+    - Cho phép đáp ứng nhanh các yêu cầu về khối lượng dữ liệu ngày càng tăng
+- Nhà cung cấp Cloud dựa vào ảo hóa để cung cấp các giải pháp cho khách hàng
+### 2.1 Server ảo
+- Ảo hóa Server tận dụng lợi thế của các nguồn tài nguyên rảnh rỗi và hợp nhất số Server được yêu cầu. Ảo hóa phân chia OS từ phần cứng. Điều này cho phép nhiều OS tồn tại trên một phần cứng. Mỗi thành phần của OS gọi là máy ảo (Virtual Machine)
+- Một Server với nhiều VM dùng một người giám sát để quản lý truy cập phần vật lý của Server
+
+![8](/image/2021-04-23_14-46-12.png)
+
+- Một phương pháp khác để quản lý VM trên Server, nhất là trong môi trường data center là dùng Switch ảo kết nối VM đến NIC vật lý
+
+![9](/image/2021-04-23_14-50-50.png)
+- Ở DC, nhiều Server được đặt trong một rack. 2 NIC vật lý được gắn vào 2 Switch dự phòng. Rack được đặt theo hàng và được quản lý bởi 2 Switch dự phòng ở cuối hàng.
+
+![10](/image/2021-04-23_14-52-11.png)
+
+### 2.2 Dịch vụ Cloud Computing 
+1. Người dùng yêu câu một VM hoặc một nhóm các VM
+2. Kỹ sư ở data center cấu hình ảo hóa phần mềm
+3. Phần mềm ảo hóa tạo ra VM
+- Nét đặc trưng 
+    - **On-demand self-service:** Người dùng có thể lựa chọn, thay đổi và thôi dịch vụ mà không cần tác động của con người
+    - **Broad network access:** Dịch vụ có thể truy cập ở bất cứ thiết bị nào trên mọi mạng
+    - **Resource pooling:** Nhà cung cấp có một nguồn tài nguyên có thể tự động phân phối cho người dùng, người dùng không cần quan tâm về vị trí phần cứng
+    - **Rapid elasticity:** Các nguồn tài nguyên có thể mở rộng hoặc thu lại nếu cần
+    - **Measured service:** Nhà cung cấp có thể đo đạc mức độ sử dụng và báo lại cho khách hàng
+- Các dịch vụ
+    - **Software as a Service (SaaS):** Nhà cung cấp có trách nhiệm cung cấp các dịch vụ truy cập qua Internet như email, office 365,... Người dùng chỉ cần cung cấp dữ liệu của họ
+    - **Platform as a Service (PaaS):** Nhà cung cấp có trách nhiệm cung cấp truy cập các công cụ phát triển và dịch vụ được dùng để truyền ứng dụng. Người dùng có thể thay đổi phần cứng ảo hóa
+    - **Infrastructure as a Service (IaaS):** Nhà cung cấp có trách nhiệm cung cấp truy cập vào trang thiết bị mạng, dịch vụ ảo hóa mạng, và cơ sở hạ tầng mạng
+- 4 mô hình cloud 
+    - **Public clouds:** Ứng dụng và dịch vụ dựa trên Cloud được cung cấp bởi một Cloud công cộng. Cloud công cộng sử dụng Internet để cung cấp dịch vụ. 
+    - **Private clouds:** Ứng dụng và dịch vụ dựa trên Cloud trong một Cloud private được hướng đến một tổ chức cụ thể, như chính phủ,...
+    - **Hybrid clouds:** Hybird Cloud được tạo bởi 2 hoặc nhiều Cloud. Mỗi phần là mội đối tượng khác nhau nhưng đều kết nối bằng một kiểu kiến trúc. Là sự kết hợp của private cloud và public cloud.
+    - **Community clouds:** Cloud cộng đồng được tạo cho một cộng đồng riêng lẻ.
+
+### 2.3 Cơ sở hạ tầng của mạng ảo (Virtual Network)
+- Một cơ sở hạ tầng mạng ảo gồm tập hợp các chức năng mạng ảo (VNF), gồm Switch, Server load balancers(SLB), Router, Firewall ảo
+
+![11](/image/2021-04-23_15-23-50.png)
+- Nhà cung cấp cloud có thể đề nghị giải pháp IaaS tới khách hàng, trong đó bao gồm SLB. Sau đó khách hàng có thể cài VNF(virtual network functions), ví dụ ASAv, CSR để quản lí lưu lượng. 
+
+## 3. Software-Defined Networking 
+- Xu thế hiện nay và tương lai là SDN. Software-Defined Networking (SDN) là một kiến trúc nhằm mục đích làm cho các mạng trở nên linh hoạt hơn, mục tiêu của Software-Defined Networking (SDN) là cho phép các kỹ sư và người quản trị cloud và mạng nhanh chóng đáp ứng các yêu cầu kinh doanh thay đổi thông qua một bộ điều khiển tập trung.
+
+### 3.1 Data, Control, và Management Planes
+- Một thiết bị mạng truyền thống gồm 2 plan. Phần data plan có trách nhiện chuyển tiếp dữ liệu nhanh nhất có thể
+- Data plane gồm các bước: 
+    - L2 và L3 đóng và mở gói
+    - Thêm hoặc loại bỏ 802.1Q trunking header
+    - Tìm kiếm bảng địa chỉ MAC
+    - Tìm kiếm bảng định tuyến
+    - Mã hóa dữ liệu và thêm một IP header mới (VPN)
+    - Thay đổi địa chỉ IP nguồn và đích (NAT)
+    - Loại bỏ tin dựa và bộ lọc (ACL, port security)
+
+### 3.2 Controllers
+- Control plane từng là một phần của thiết bị và được phân phối qua các thiết bị. Thiết bị phải tính toán tài nguyên và bảo trì cấu trúc dữ liệu L2 và L3 (bảng ARP, bảng định tuyến,...)
+- Trong SDN, chức năng của control plane có thể loại bỏ ở thiết bị vật lý và đặt trong trung tâm ứng dụng gọi là một controller
+
+![12](/image/2021-04-23_15-48-49.png)
+### 3.3 Ví dụ về SDN
+- Giao thức cốt lõi được sử dụng trong SDN là OpenFlow. Nó cho phép tạo ra các giao tiếp giữa bộ điều khiển và thiết bị chuyển mạch của mạng.
+- Openflow đóng vai trò là lớp giao tiếp giữa phần điều khiển và phần chuyển tiếp và cung cấp các API cho phép khả năng lập trình cho lớp điều khiển
+- ACI là giải pháp do Cisco in-house SDN đưa ra dành cho DC. 
+- APIC-EM là giải pháp do Cisco khuyến cáo cho các doanh nghiệp. Giải pháp này sử dụng controller quản lí thiết bị mạng nhưng cũng hỗ trợ router và switch bằng cách sử dụng SBI tương tự như kĩ sư quản trị mạng. 
+- APIC-EM controller có khả năng quản lý chính sách trên toàn mạng. , ACL Analysis và Path Trace cho phép người quản trị dễ dàng hình dung lưu lượng và tìm xung đột.
